Let xf86AllocateOffscreenLinear() allocate even when the requested granularity doesn't match the front buffer pitch by allocating a bit more and aligning the result.

Fixes Xvideo on some resolutions and drivers such as 1680x1050 on nv.

Patch from https://bugs.freedesktop.org/show_bug.cgi?id=6151 by
Benjamin Herrenschmidt.

OK'ed by tron@.