xfree/xc/programs/Xserver/hw/xfree86/common/xf86fbman.c
@@ -952,10 +952,16 @@ localAllocateOffscreenLinear(
    extents = REGION_EXTENTS(pScreen, offman->InitialBoxes);
    pitch = extents->x2 - extents->x1;
 
-   if(gran && ((gran > pitch) || (pitch % gran))) {
+   if (gran && gran > pitch) {
 	/* we can't match the specified alignment with XY allocations */
 	xfree(link);
 	return NULL;
+   }
+   if (gran && (pitch % gran)) {
+       /* pitch and granularity aren't a perfect match, let's allocate
+	* a bit more so we can align later on
+	*/
+       length += gran - 1;
    }
 
    if(length < pitch) { /* special case */
@@ -979,6 +985,8 @@ localAllocateOffscreenLinear(
 	linear->pScreen = pScreen;
 	linear->size = h * w;
 	linear->offset = (pitch * area->box.y1) + area->box.x1;
+	if (gran && linear->offset % gran)
+		linear->offset += gran - (linear->offset % gran);
 	linear->granularity = gran;
 	linear->MoveLinearCallback = moveCB;
 	linear->RemoveLinearCallback = removeCB;
